--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,4 @@ language: cpp
 script:
   - xcodebuild -project polyroot/polyroot.xcodeproj -scheme polyroot
   - xcodebuild -project finiteDifferences/finiteDifferences.xcodeproj -scheme finiteDifferences
+  - xcodebuild -project CubicSplineInterpolation/CubicSplineInterpolation.xcodeproj -scheme CubicSplineInterpolation
