--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ script:
   - xcodebuild -project polyroot/polyroot.xcodeproj -scheme polyroot
   - xcodebuild -project finiteDifferences/finiteDifferences.xcodeproj -scheme finiteDifferences
   - xcodebuild -project CubicSplineInterpolation/CubicSplineInterpolation.xcodeproj -scheme CubicSplineInterpolation
+  - xcodebuild -project CompositeSimpsonsRule/CompositeSimpsonsRule.xcodeproj -scheme CompositeSimpsonsRule
