--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ script:
   - xcodebuild -project CompositeSimpsonsRule/CompositeSimpsonsRule.xcodeproj -scheme CompositeSimpsonsRule
   - xcodebuild -project EigenExamples/EigenExamples.xcodeproj -scheme EigenExamples
   - xcodebuild -project FixedPointIteration/FixedPointIteration.xcodeproj -scheme FixedPointIteration
+  - xcodebuild -project RandomNumberGenerators/RandomNumberGenerators.xcodeproj -scheme RandomNumberGenerators
