Lagrange interpolation added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,19 +12,20 @@ set(CATCH_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/lib)
 add_library(Catch INTERFACE)
 target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
 
-add_executable(BBP ${sourcefiles} examples/BBPTypeFormula/main.cpp)
-add_executable(BrentSalaminFormula ${sourcefiles} examples/BrentSalaminFormula/main.cpp)
-add_executable(EigenExamples ${sourcefiles} examples/EigenExamples/main.cpp)
-add_executable(FixedPointIteration ${sourcefiles} examples/FixedPointIteration/main.cpp)
-add_executable(GoldenSectionSearch ${sourcefiles} examples/GoldenSectionSearch/main.cpp)
-add_executable(Knapsack ${sourcefiles} examples/Knapsack/main.cpp)
-add_executable(IntegerFactorization ${sourcefiles} examples/IntegerFactorization/main.cpp)
-add_executable(MetropolisHastings ${sourcefiles} examples/MetropolisHastings/main.cpp)
-add_executable(NumericalIntegration ${sourcefiles} examples/NumericalIntegration/main.cpp)
-add_executable(PolynomialRoot ${sourcefiles} examples/polyroot/main.cpp)
-add_executable(RandomNumberGeneration ${sourcefiles} examples/RandomNumberGenerators/main.cpp)
-add_executable(RungeKuttaMethod ${sourcefiles} examples/RungeKutta/main.cpp)
-add_executable(SubsetSumProblem ${sourcefiles} examples/SubsetSumProblem/main.cpp)
+add_executable(BBP src/bbpTypeFormula.cpp examples/BBPTypeFormula/main.cpp)
+add_executable(BrentSalaminFormula src/brentSalaminFormula.h examples/BrentSalaminFormula/main.cpp)
+add_executable(EigenExamples examples/EigenExamples/main.cpp)
+add_executable(FixedPointIteration src/fixedPointIteration.cpp examples/FixedPointIteration/main.cpp)
+add_executable(GoldenSectionSearch src/goldenSectionSearch.cpp examples/GoldenSectionSearch/main.cpp)
+add_executable(LagrangeInterpolation src/lagrangeInterpolation.cpp examples/LagrangeInterpolation/main.cpp)
+add_executable(Knapsack src/knapsack.cpp examples/Knapsack/main.cpp)
+add_executable(IntegerFactorization src/integerFactorization.h examples/IntegerFactorization/main.cpp)
+add_executable(MetropolisHastings src/statistics.cpp src/metropolisHastings.cpp examples/MetropolisHastings/main.cpp)
+add_executable(NumericalIntegration src/statistics.cpp src/numericalIntegration.cpp examples/NumericalIntegration/main.cpp)
+add_executable(PolynomialRoot src/polyroot.cpp examples/polyroot/main.cpp)
+add_executable(RandomNumberGeneration src/statistics.cpp src/devrandom.h src/lcg.cpp examples/RandomNumberGenerators/main.cpp)
+add_executable(RungeKuttaMethod src/rungeKutta.cpp examples/RungeKutta/main.cpp)
+add_executable(SubsetSumProblem src/subsetSumProblem.cpp examples/SubsetSumProblem/main.cpp)
 
 set(TEST_SOURCES ${PROJECT_SOURCE_DIR}/tests/testmain.cpp)
 add_executable(tests ${sourcefiles} ${TEST_SOURCES})
