Fixed point iteration made header only
Golden search deleted & will be reimplement
Polyroot deleted & will be reimplement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,6 @@ add_executable(Knapsack ${sourcefiles} examples/Knapsack/main.cpp)
 add_executable(IntegerFactorization ${sourcefiles} examples/IntegerFactorization/main.cpp)
 add_executable(MetropolisHastings ${sourcefiles} examples/MetropolisHastings/main.cpp)
 add_executable(NumericalIntegration ${sourcefiles} examples/NumericalIntegration/main.cpp)
-add_executable(PolynomialRoot ${sourcefiles} examples/polyroot/main.cpp)
 add_executable(RandomNumberGeneration ${sourcefiles} examples/RandomNumberGenerators/main.cpp)
 add_executable(RungeKuttaMethod ${sourcefiles} examples/RungeKutta/main.cpp)
 add_executable(SubsetSumProblem ${sourcefiles} examples/SubsetSumProblem/main.cpp)
@@ -32,8 +31,8 @@ add_executable(SubsetSumProblem ${sourcefiles} examples/SubsetSumProblem/main.cp
 set(TEST_SOURCES ${PROJECT_SOURCE_DIR}/tests/testmain.cpp)
 add_executable(tests ${sourcefiles} ${TEST_SOURCES})
 target_link_libraries(tests Catch)
-set_target_properties(tests
+#[[set_target_properties(tests
         PROPERTIES
         COMPILE_FLAGS "-ftest-coverage -fprofile-arcs"
         LINK_FLAGS    "-lgcov --coverage"
-        )
+        )]]
