--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,8 @@ target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
 set(TEST_SOURCES ${PROJECT_SOURCE_DIR}/tests/testmain.cpp)
 add_executable(tests ${sourcefiles} ${TEST_SOURCES})
 target_link_libraries(tests Catch)
-
+set_target_properties(tests
+        PROPERTIES
+        COMPILE_FLAGS "-ftest-coverage -fprofile-arcs"
+        LINK_FLAGS    "-lgcov --coverage"
+        )
